--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js",
     "dev": "node server.js",
     "api": "node api-server.js",
+    "setup": "node setup-deploy.js",
     "build": "echo 'Build completed'",
     "deploy": "node auto-push.js"
   },
