大幅改善麦克风访问体验
- 添加智能权限检查和状态显示
- 实现详细的错误处理和用户指导
- 添加可视化权限设置指南
- 支持HTTPS检查和浏览器兼容性检测
- 优化音频录制质量和错误恢复
- 添加麦克风按钮状态视觉反馈
- 提供完整的故障排除指导

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@
 PORT=3001
 
 # API密钥（可选，如果不设置则开放访问）
-API_KEY=your_api_key_here
+API_KEY=demo_key
 
 # 可选：集成真正的AI服务
 # OPENAI_API_KEY=sk-your-openai-key-here
